third_party/rust/paste/tests/ui/env-unexpected.stderr
error: unexpected token in env! macro
 --> $DIR/env-unexpected.rs:2:21
  |
2 |     fn [<env!("VAR" "VAR")>]() {}
  |                     ^^^^^
