third_party/rust/paste/tests/ui/env-unexpected.rs
paste::item! {
    fn [<env!("VAR" "VAR")>]() {}
}

fn main() {}
